Styling Update 	- Wrapped everything in a container for easier styling 	- Form now is on left side of screen -- need to fix, only issue

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,12 @@
 body {
     height: 100vh;
     width: 100vw;
+}
+
+.container {
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 /* header */
